--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -95,9 +95,16 @@ nav li {
 	font-size: 1.2em;
 }
 
-li:hover {
+nav li a{
+	text-decoration: none;
+	color: black;
+}
+
+
+nav li a:hover {
 	color: #B1663C;
 }
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -123,7 +130,7 @@ li:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+    margin-top: 4em;
 }
 .gallery {
 	width: 100%;
@@ -186,8 +193,6 @@ footer nav ul {
 	margin: 2em
 }
 .modifier{
-	display:flex;
-	justify-content: center;
 	align-items: baseline;
 	gap:20px;
 }
@@ -201,3 +206,53 @@ footer nav ul {
 .image-edit{
 	margin-right: 10px;
 }
+
+#text-button-modifier{
+	font-family: 'Work Sans' ;
+}
+
+#button-modifier{
+	display: flex;
+}
+
+.categories-buttons{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	margin-top: 4em;
+	margin-bottom: 3em;
+}
+
+.categories-buttons button{
+	height: 38px;
+    border: 1px solid #1D6154;
+    font-family: 'Syne';
+    font-weight: 700;
+    color: #1D6154;
+    width: 182px;
+    text-align: center;
+    border-radius: 60px;
+    margin-left: 1%;
+    font-size: 15px;
+}
+
+.categories-buttons button:hover{
+	color: white;
+	background-color: #1D6154;
+}
+
+
+.black-div{
+	background-color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 99%;
+	padding: 20px;
+	gap: 10px;
+}
+
