--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -109,6 +109,12 @@ nav li a:hover {
 	display: flex;
 	align-items: center;
 }
+
+.sophie-title-accueil{
+	text-decoration: none;
+	color: #B1663C
+}
+
 #introduction figure {
 	flex: 1
 }
@@ -132,6 +138,11 @@ nav li a:hover {
 	text-align: center;
     margin-top: 4em;
 }
+
+#portfolio_1 h2 {
+	text-align: center;
+    margin-top: 4em;
+}
 .gallery {
 	width: 100%;
 	display: grid;
@@ -144,6 +155,7 @@ nav li a:hover {
 	width: 100%;
 
 }
+
 #contact {
 	width: 50%;
 margin: auto;
@@ -180,11 +192,15 @@ input[type="submit"]{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
-	background-color: #1D6154;
+	background-color: #a2a5a5;
 	margin : 2em auto ;
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+}
+
+.button-form-rempli{
+	background-color: #1D6154 !important;
 }
 
 footer nav ul {
@@ -256,3 +272,72 @@ footer nav ul {
 	gap: 10px;
 }
 
+
+.padding-0{
+	padding: 0 !important;
+}
+
+
+.modifier{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 100px;
+}
+#button-modifier {
+	display: flex;
+	margin-top: 9em;
+}
+
+#work-form hr{
+	width: 500px;
+}
+
+.formulaire-ajout-work{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 20px;
+	width: 100%;
+}
+
+form #titre, #categories {
+	width: 500px;
+	height: 50px;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	margin-bottom: 3px;
+}
+
+.label{
+	font-size: 15px;
+	margin-bottom: 10px;
+}
+
+#button-add-work{
+	padding: 10px;
+	border: none;
+}
+
+.button-clique{
+	color: white !important;
+	background-color: #1D6154 !important;
+}
+
+.button-non-clique{
+	color: #1D6154 !important;
+	background-color: white !important;	
+}
+
+.modifier_1{
+	display: block !important;
+}
+
+.padding-0{
+	padding: 0 !important;
+}
+
+#afficher_image{
+	display: none;
+}
