--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -308,6 +308,7 @@ form #titre, #categories {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	margin-bottom: 3px;
+	background-color: white;
 }
 
 .label{
@@ -320,7 +321,7 @@ form #titre, #categories {
 	border: none;
 }
 
-.button-clique{
+.button-clique, #b{
 	color: white !important;
 	background-color: #1D6154 !important;
 }
